# aves

./: genindex.html  index.html  project_organization.html  requirements.txt  search.html  setup.cfg
.github/workflows/: python-package-conda.yml  python-package.yml
getting_started/: ENVIRONMENT.html  INSTALL.html  getting_started.html
source/: aves.data.html  aves.features.html  aves.features.osm.html  aves.features.twokenize.html  aves.html  aves.models.datafusion.html  aves.models.grid.html  aves.models.html  aves.models.network.html  aves.visualization.collections.html  aves.visualization.colors.html  aves.visualization.figures.html  aves.visualization.html  aves.visualization.maps.html  aves.visualization.networks.fdeb.html  aves.visualization.networks.heb.html  aves.visualization.networks.html  aves.visualization.primitives.html  aves.visualization.tables.html  aves.visualization.text.html  modules.html
src/aves/data/: eod.py
