[metadata]
name = aves
version = attr: aves.__version__
author = Eduardo Graells-Garrido
author_email = egraells@dcc.uchile.cl
url = https://github.com/zorzalerrante/aves
description = Module to support my Information Visualization course and my own work.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = visualization, data science
license = GPL3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    aves=src/aves
    aves.rawdata=data
packages = find_namespace:
include_package_data = True
requires_python = >=3.8
install_requires =
    pandas
    geopandas<=0.9.0
    seaborn
    shapely<=1.7.1
    numpy<=1.22.4
    cython<=0.29.28
    pygeos<=0.10
    adjustText
    spectra
    cytoolz
    pymunk
    scattertext

[options.packages.find]
where = 
    src
    data
exclude = tests

[options.package_data]
aves.rawdata =
    **


[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=aves,tests
ignore_missing_imports=true

[tool:pytest]
testpaths=tests/
addopts =
    --cov
    --verbose
norecursedirs =
    dist
    build
    .tox


